plugin-go/plugin.h

typedef enum BundleBehavior BundleBehavior;
typedef uint8_t BundleBehavior;
typedef enum Environment Environment;
typedef uint8_t Environment;
typedef enum OutputFormat OutputFormat;
typedef uint8_t OutputFormat;
typedef enum SourceType SourceType;
typedef uint8_t SourceType;
typedef enum SpecifierType SpecifierType;
typedef uint8_t SpecifierType;
typedef enum Priority Priority;
typedef uint8_t Priority;
typedef enum DependencyFlags DependencyFlags;
typedef uint8_t DependencyFlags;
typedef enum AssetFlags AssetFlags;
typedef uint32_t AssetFlags;
typedef enum EnvironmentFlags EnvironmentFlags;
typedef uint8_t EnvironmentFlags;
/**
 * Owned byte buffer returned by getter functions.
 * Release with `parcel_free_buffer()` when done.
 * Zero-initialise before use so a no-op getter leaves `data == NULL`.
 */
typedef struct Buffer {
  uint8_t *data;
  uintptr_t len;
  uintptr_t cap;
} Buffer;
/**
 * Opaque handle to a Parcel asset. Pass to `parcel_asset_*` functions.
 */
typedef uint64_t Asset;
/**
 * Opaque handle to Parcel build options. Passed to all plugin entry points.
 */
typedef uint64_t Options;
/**
 * Opaque handle to a Parcel target. Obtained via `parcel_asset_get_target()`.
 */
typedef uint64_t Target;
/**
 * Dependency descriptor passed to `parcel_asset_add_dependency()`.
 * Use `PARCEL_SPECIFIER_ESM` / `PARCEL_PRIORITY_SYNC` / `PARCEL_BUNDLE_BEHAVIOR_NONE` as defaults.
 */
typedef struct DependencyOptions {
  /**
   * Module specifier bytes (e.g. `"./foo.js"`). Required.
   */
  const uint8_t *specifier;
  /**
   * Byte length of `specifier`.
   */
  uintptr_t specifier_len;
  /**
   * `PARCEL_SPECIFIER_*`
   */
  SpecifierType specifier_type;
  /**
   * `PARCEL_PRIORITY_*`
   */
  Priority priority;
  /**
   * `PARCEL_BUNDLE_BEHAVIOR_*`
   */
  BundleBehavior bundle_behavior;
  /**
   * `PARCEL_DEP_*` bits
   */
  DependencyFlags flags;
} DependencyOptions;
/**
 * Opaque handle to a Parcel dependency. Passed to `parcel_plugin_resolve()`.
 */
typedef uint64_t Dependency;
/**
 * Release a `Buffer` previously filled by a getter or `parcel_buffer_alloc()`.
 */
void parcel_free_buffer(struct Buffer *buf);
/**
 * Returns the absolute filesystem path of the source asset into `*buf`.
 * `options` is the handle received from `parcel_plugin_transform()`.
 * Caller must `parcel_free_buffer(buf)`.
 */
void parcel_asset_get_file_path(struct Buffer *buf, Asset asset, Options _options);
/**
 * Returns the named pipeline into `*buf`, or leaves `buf->data == NULL` if none is set.
 * Caller must `parcel_free_buffer(buf)` when `data != NULL`.
 */
void parcel_asset_get_pipeline(struct Buffer *buf, Asset asset);
/**
 * Sets the named pipeline. Pass `NULL` / `0` to clear.
 */
void parcel_asset_set_pipeline(Asset asset, const uint8_t *pipeline, uintptr_t pipeline_len);
/**
 * Returns the bundle behavior (`PARCEL_BUNDLE_BEHAVIOR_*`).
 */
BundleBehavior parcel_asset_get_bundle_behavior(Asset asset);
/**
 * Sets the bundle behavior (`PARCEL_BUNDLE_BEHAVIOR_*`).
 */
void parcel_asset_set_bundle_behavior(Asset asset, BundleBehavior behavior);
/**
 * Returns the raw `AssetFlags` bitfield (`PARCEL_ASSET_*` bits).
 */
AssetFlags parcel_asset_get_flags(Asset asset);
/**
 * Replaces the `AssetFlags` bitfield.
 */
void parcel_asset_set_flags(Asset asset, AssetFlags flags);
/**
 * Returns the unique key into `*buf`, or leaves `buf->data == NULL` if not set.
 * Caller must `parcel_free_buffer(buf)` when `data != NULL`.
 */
void parcel_asset_get_unique_key(struct Buffer *buf, Asset asset);
/**
 * Sets the unique key. Pass `NULL` / `0` to clear.
 */
void parcel_asset_set_unique_key(Asset asset, const uint8_t *key, uintptr_t key_len);
/**
 * Returns an opaque `Target` handle. Valid for the duration of the transform call.
 */
Target parcel_asset_get_target(Asset asset);
/**
 * Returns the target environment (`PARCEL_ENV_*`).
 */
Environment parcel_target_get_environment(Target target);
/**
 * Returns the output format (`PARCEL_OUTPUT_FORMAT_*`).
 */
OutputFormat parcel_target_get_output_format(Target target);
/**
 * Returns the source type (`PARCEL_SOURCE_TYPE_*`).
 */
SourceType parcel_target_get_source_type(Target target);
/**
 * Returns the `EnvironmentFlags` bitfield (`PARCEL_ENV_FLAG_*` bits).
 */
EnvironmentFlags parcel_target_get_env_flags(Target target);
/**
 * Returns the public URL (e.g. `"/"`) into `*buf`. Caller must `parcel_free_buffer(buf)`.
 */
void parcel_target_get_public_url(struct Buffer *buf, Target target);
/**
 * Returns the absolute path of the dist directory into `*buf`.
 * `options` is the handle received from `parcel_plugin_transform()`.
 * Caller must `parcel_free_buffer(buf)`.
 */
void parcel_target_get_dist_dir(struct Buffer *buf, Target target, Options _options);
/**
 * Appends a dependency to the asset. The new dependency inherits the asset's target.
 */
void parcel_asset_add_dependency(Asset asset, const struct DependencyOptions *dep);
/**
 * Registers an exported symbol name (e.g. `"default"`, `"foo"`, `"*"`).
 */
void parcel_asset_add_export_symbol(Asset asset, const uint8_t *name, uintptr_t name_len);
/**
 * Returns the raw specifier string (e.g. `"custom:greeting"`) into `*buf`.
 */
void parcel_dep_get_specifier(struct Buffer *buf, Dependency dep);
/**
 * Returns the specifier type (`PARCEL_SPECIFIER_*`).
 */
SpecifierType parcel_dep_get_specifier_type(Dependency dep);
/**
 * Returns the priority (`PARCEL_PRIORITY_*`).
 */
Priority parcel_dep_get_priority(Dependency dep);
/**
 * Returns the bundle behavior (`PARCEL_BUNDLE_BEHAVIOR_*`).
 */
BundleBehavior parcel_dep_get_bundle_behavior(Dependency dep);
/**
 * Returns the raw `DependencyFlags` bitfield (`PARCEL_DEP_*` bits).
 */
DependencyFlags parcel_dep_get_flags(Dependency dep);
/**
 * Returns the absolute path of the file containing this import into `*buf`.
 */
void parcel_dep_get_source_path(struct Buffer *buf, Dependency dep, Options _options);
/**
 * Returns the base path for resolving the specifier into `*buf`.
 * Falls back to the source file path when `resolve_from` is not set.
 */
void parcel_dep_get_resolve_from(struct Buffer *buf, Dependency dep, Options _options);
/**
 * Returns an opaque `Target` handle for the dependency.
 */
Target parcel_dep_get_target(Dependency dep);
/**
 * Returns the project root as an absolute filesystem path into `*buf`.
 * Caller must `parcel_free_buffer(buf)`.
 */
void parcel_options_get_project_root(struct Buffer *buf, Options options);
/**
 * Looks up `key` in the build environment map.
 * Writes the value into `*buf` if found; leaves `buf->data == NULL` if not.
 * Caller must `parcel_free_buffer(buf)` when `data != NULL`.
 */
void parcel_options_get_env(struct Buffer *buf,
                            Options options,
                            const uint8_t *key,
                            uintptr_t key_len);