crates/parcel-plugin/src/ffi.rs

unsafe extern "C" {
  #[doc = " Returns the absolute filesystem path of the source asset into `*buf`.\n `options` is the handle received from `parcel_plugin_transform()`.\n Caller must `parcel_free_buffer(buf)`."]
  pub fn parcel_asset_get_file_path(buf: *mut Buffer, asset: Asset, _options: Options);
}
unsafe extern "C" {
  #[doc = " Returns the named pipeline into `*buf`, or leaves `buf->data == NULL` if none is set.\n Caller must `parcel_free_buffer(buf)` when `data != NULL`."]
  pub fn parcel_asset_get_pipeline(buf: *mut Buffer, asset: Asset);
}
unsafe extern "C" {
  #[doc = " Sets the named pipeline. Pass `NULL` / `0` to clear."]
  pub fn parcel_asset_set_pipeline(asset: Asset, pipeline: *const u8, pipeline_len: usize);
}
unsafe extern "C" {
  #[doc = " Returns the bundle behavior (`PARCEL_BUNDLE_BEHAVIOR_*`)."]
  pub fn parcel_asset_get_bundle_behavior(asset: Asset) -> BundleBehavior;
}
unsafe extern "C" {
  #[doc = " Sets the bundle behavior (`PARCEL_BUNDLE_BEHAVIOR_*`)."]
  pub fn parcel_asset_set_bundle_behavior(asset: Asset, behavior: BundleBehavior);
}
unsafe extern "C" {
  #[doc = " Returns the raw `AssetFlags` bitfield (`PARCEL_ASSET_*` bits)."]
  pub fn parcel_asset_get_flags(asset: Asset) -> AssetFlags;
}
unsafe extern "C" {
  #[doc = " Replaces the `AssetFlags` bitfield."]
  pub fn parcel_asset_set_flags(asset: Asset, flags: AssetFlags);
}
unsafe extern "C" {
  #[doc = " Returns the unique key into `*buf`, or leaves `buf->data == NULL` if not set.\n Caller must `parcel_free_buffer(buf)` when `data != NULL`."]
  pub fn parcel_asset_get_unique_key(buf: *mut Buffer, asset: Asset);
}
unsafe extern "C" {
  #[doc = " Sets the unique key. Pass `NULL` / `0` to clear."]
  pub fn parcel_asset_set_unique_key(asset: Asset, key: *const u8, key_len: usize);
}
unsafe extern "C" {
  #[doc = " Returns an opaque `Target` handle. Valid for the duration of the transform call."]
  pub fn parcel_asset_get_target(asset: Asset) -> Target;
}
unsafe extern "C" {
  #[doc = " Returns the target environment (`PARCEL_ENV_*`)."]
  pub fn parcel_target_get_environment(target: Target) -> Environment;
}
unsafe extern "C" {
  #[doc = " Returns the output format (`PARCEL_OUTPUT_FORMAT_*`)."]
  pub fn parcel_target_get_output_format(target: Target) -> OutputFormat;
}
unsafe extern "C" {
  #[doc = " Returns the source type (`PARCEL_SOURCE_TYPE_*`)."]
  pub fn parcel_target_get_source_type(target: Target) -> SourceType;
}
unsafe extern "C" {
  #[doc = " Returns the `EnvironmentFlags` bitfield (`PARCEL_ENV_FLAG_*` bits)."]
  pub fn parcel_target_get_env_flags(target: Target) -> EnvironmentFlags;
}
unsafe extern "C" {
  #[doc = " Returns the public URL (e.g. `\"/\"`) into `*buf`. Caller must `parcel_free_buffer(buf)`."]
  pub fn parcel_target_get_public_url(buf: *mut Buffer, target: Target);
}
unsafe extern "C" {
  #[doc = " Returns the absolute path of the dist directory into `*buf`.\n `options` is the handle received from `parcel_plugin_transform()`.\n Caller must `parcel_free_buffer(buf)`."]
  pub fn parcel_target_get_dist_dir(buf: *mut Buffer, target: Target, _options: Options);
}
unsafe extern "C" {
  #[doc = " Appends a dependency to the asset. The new dependency inherits the asset's target."]
  pub fn parcel_asset_add_dependency(asset: Asset, dep: *const DependencyOptions);
}
unsafe extern "C" {
  #[doc = " Registers an exported symbol name (e.g. `\"default\"`, `\"foo\"`, `\"*\"`)."]
  pub fn parcel_asset_add_export_symbol(asset: Asset, name: *const u8, name_len: usize);
}
unsafe extern "C" {
  #[doc = " Returns the raw specifier string (e.g. `\"custom:greeting\"`) into `*buf`."]
  pub fn parcel_dep_get_specifier(buf: *mut Buffer, dep: Dependency);
}
unsafe extern "C" {
  #[doc = " Returns the specifier type (`PARCEL_SPECIFIER_*`)."]
  pub fn parcel_dep_get_specifier_type(dep: Dependency) -> SpecifierType;
}
unsafe extern "C" {
  #[doc = " Returns the priority (`PARCEL_PRIORITY_*`)."]
  pub fn parcel_dep_get_priority(dep: Dependency) -> Priority;
}
unsafe extern "C" {
  #[doc = " Returns the bundle behavior (`PARCEL_BUNDLE_BEHAVIOR_*`)."]
  pub fn parcel_dep_get_bundle_behavior(dep: Dependency) -> BundleBehavior;
}
unsafe extern "C" {
  #[doc = " Returns the raw `DependencyFlags` bitfield (`PARCEL_DEP_*` bits)."]
  pub fn parcel_dep_get_flags(dep: Dependency) -> DependencyFlags;
}
unsafe extern "C" {
  #[doc = " Returns the absolute path of the file containing this import into `*buf`."]
  pub fn parcel_dep_get_source_path(buf: *mut Buffer, dep: Dependency, _options: Options);
}
unsafe extern "C" {
  #[doc = " Returns the base path for resolving the specifier into `*buf`.\n Falls back to the source file path when `resolve_from` is not set."]
  pub fn parcel_dep_get_resolve_from(buf: *mut Buffer, dep: Dependency, _options: Options);
}
unsafe extern "C" {
  #[doc = " Returns an opaque `Target` handle for the dependency."]
  pub fn parcel_dep_get_target(dep: Dependency) -> Target;
}
unsafe extern "C" {
  #[doc = " Returns the project root as an absolute filesystem path into `*buf`.\n Caller must `parcel_free_buffer(buf)`."]
  pub fn parcel_options_get_project_root(buf: *mut Buffer, options: Options);
}
unsafe extern "C" {
  #[doc = " Looks up `key` in the build environment map.\n Writes the value into `*buf` if found; leaves `buf->data == NULL` if not.\n Caller must `parcel_free_buffer(buf)` when `data != NULL`."]
  pub fn parcel_options_get_env(buf: *mut Buffer, options: Options, key: *const u8, key_len: usize);
}
